--- a/front/package.json
+++ b/front/package.json
@@ -72,6 +72,8 @@
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@reduxjs/toolkit": "2.5.1",
+    "@stomp/stompjs": "^6.1.2",
+    "sockjs-client": "^1.5.1",
     "axios": "1.7.9",
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
