--- a/back/src/main/resources/config/application-dev.yml
+++ b/back/src/main/resources/config/application-dev.yml
@@ -19,6 +19,9 @@ logging:
     tech.jhipster: DEBUG
     org.hibernate.SQL: DEBUG
     com.mycompany.myapp: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.web.servlet.resource: TRACE
+    org.springframework.web.filter.CommonsRequestLoggingFilter: TRACE
 
 spring:
   devtools:
@@ -75,7 +78,7 @@ jhipster:
   # CORS is only enabled by default with the "dev" profile
   cors:
     # Allow Ionic for JHipster by default (* no longer allowed in Spring Boot 2.4+)
-    allowed-origins: 'http://localhost:8100,https://localhost:8100,http://l4-front-cont:9000,https://l4-front-cont:9000,http://l4-front-cont:9060,https://l4-front-cont:9060'
+    allowed-origins: 'http://localhost:8100,https://localhost:8100,http://l5-front-cont:9000,https://l5-front-cont:9000,http://l5-front-cont:9060,https://l5-front-cont:9060'
     # Enable CORS when running in GitHub Codespaces
     allowed-origin-patterns: 'https://*.githubpreview.dev'
     allowed-methods: '*'
